--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,11 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">A propos de Formation Educateur Canin</h5>
-          <p class="grey-text text-lighten-4">oila 30 ans que je pratique ce métier et cette passion, et je crois pouvoir me permettre de rétablir la réalité sur ce qu’est un éducateur canin ou plus exactement sur ce qu’il devrait être.</p>
+          <p class="grey-text text-lighten-4">Voila 30 ans que je pratique ce métier et cette passion, et je crois pouvoir me permettre de rétablir la réalité sur ce qu’est un éducateur canin ou plus exactement sur ce qu’il devrait être.</p>
         </div>
         <div class="col l3 s12">
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
           <ul>
             <li><a class="white-text" href="/contact">Contactez Nous</a></li>
           </ul>
